Linear logic added,  lifetimes improved, minor changes

--- a/tex/main.bib
+++ b/tex/main.bib
@@ -1,3 +1,10 @@
+
+@article{girard:linear_logic_syntax_semantics,
+  author          = {Jean{-}Yves Girard},
+  title           = {Linear Logic: its Syntax and Semantics},
+  url             = {https://girard.perso.math.cnrs.fr/Synsem.pdf},
+}
+
 @article{milner:type_polymorphism,
 	author          = {Robin Milner},
 	title           = {A Theory of Type Polimorphism in Programming}, 
