Extended some parts

--- a/tex/main.bib
+++ b/tex/main.bib
@@ -94,6 +94,13 @@
 	key             = {Dispense del corso},
 }
 
+@misc{mechpen:misundestand,
+  author       = {Mechpen},
+  title        = {Mis-Understanding Rust lifetime},
+  year         = {2019},
+  url          = {https://mechpen.github.io/posts/2019-09-28-rust-lifetime/index.html#example-3},
+}
+
 @misc{rust:language,
 	author	        = {Steve Klabnik and Carol  Nichols},
 	title           = {The Rust Programming Language},
