Added Rust rfcs

--- a/tex/main.bib
+++ b/tex/main.bib
@@ -94,12 +94,31 @@
 	key             = {Dispense del corso},
 }
 
+@misc{freeBSD_vulnerability,
+  title         = {FreeBSD-SA-02:38.signed-error},
+  author        = {Security Advisory The FreeBSD Project},
+  year          = {2002},
+  url           = {https://www.freebsd.org/security/advisories/FreeBSD-SA-02:38.signed-error.asc},
+}
+
+@misc{git:outliving_static,
+  title = {rust-lang/rfcs},
+  url = {https://github.com/rust-lang/rfcs/blob/master/text/1414-rvalue_static_promotion.md},
+}
+
 @misc{mechpen:misundestand,
   author       = {Mechpen},
   title        = {Mis-Understanding Rust lifetime},
   year         = {2019},
   url          = {https://mechpen.github.io/posts/2019-09-28-rust-lifetime/index.html#example-3},
 }
+
+@misc{null:pointer_dereference,
+  author        = {Common Weakness Enumeration},
+  title         = {CWE-476: NULL Pointer Dereference},
+  url           = {https://cwe.mitre.org/data/definitions/476.html},
+}
+
 
 @misc{rust:language,
 	author	        = {Steve Klabnik and Carol  Nichols},
@@ -161,19 +180,6 @@
   year          = {2020},
   url           = {https://www.tiobe.com/tiobe-index/},
   key           = {TIOBE},
-}
-
-@misc{freeBSD_vulnerability,
-  title         = {FreeBSD-SA-02:38.signed-error},
-  author        = {Security Advisory The FreeBSD Project},
-  year          = {2002},
-  url           = {https://www.freebsd.org/security/advisories/FreeBSD-SA-02:38.signed-error.asc},
-}
-
-@misc{null:pointer_dereference,
-  author        = {Common Weakness Enumeration},
-  title         = {CWE-476: NULL Pointer Dereference},
-  url           = {https://cwe.mitre.org/data/definitions/476.html},
 }
 
 @techreport{necula_lee:proof_carrying,
