--- a/tex/main.tex
+++ b/tex/main.tex
@@ -8,6 +8,7 @@
 \hypersetup{pdftitle={Proprietà di sicurezza nel linguaggio Rust},pdfauthor={Edoardo De Matteis}}
 
 \usepackage{listings, float, graphicx, lipsum, cleveref, parallel, verbatim, mathtools, ebproof, comment}
+\usepackage{amssymb, pifont}
 \usepackage[square, sort, comma, numbers]{natbib}
 \usepackage[dvipsnames]{xcolor}
 \usepackage[nottoc]{tocbibind}
@@ -39,7 +40,7 @@
 
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{corollary}{Corollary}[theorem]
-\newtheorem{lemma}[theorem]{Lemma}
+\newtheorem{lemma}[theorem]{}
 
 \newenvironment{myDefinition}[2]{ \begin{Definizione}[adjusted title=#1]{}{#2}
     \textbf{Definizione \thetcbcounter.} }{\end{Definizione}}
@@ -93,6 +94,10 @@
 % command for inline code
 \newcommand{\textcode}[1]{\colorbox{backcolour}{\texttt{#1}}}
 
+% checkmark and x mark
+\newcommand{\cmark}{\ding{51}}
+\newcommand{\xmark}{\ding{55}}
+
 % Commands for the titlepage
 \title{Proprietà di sicurezza nel linguaggio Rust}
 \author{Edoardo De Matteis}
@@ -134,7 +139,8 @@
 
 \chapter{Introduzione}
 
-Il linguaggio di programmazione C è stato sviluppato nel 1978 e ad oggi è ancora uno dei più popolari ~\cite{tiobe:index} ~\cite{pypl:index}, ciò è dovuto al fatto che circa il 98\% ~\cite{real_men_program_in_c} dei sistemi informatici sul mercato sono sistemi integrati che richiedono un basso overhead e C risponde a questa esigenza tramite una gestione manuale della memoria. Proprio per questo però C permette di scrivere programmi non sicuri ed esistono linguaggi considerati sicuri, ad esempio Java, che gestiscono automaticamente la memoria tramite \textbf{garbage collection} (definizione \ref{def:garbage_collection}) al prezzo di un maggiore overhead, sono quindi poco adatti alla scrittura di codice per embedded systems.
+Il linguaggio di programmazione C è stato sviluppato nel 1978 e ad oggi è ancora uno dei più popolari ~\cite{tiobe:index} ~\cite{pypl:index}, ciò è dovuto al fatto che circa il 98\% ~\cite{real_men_program_in_c} dei sistemi informatici sul mercato siano sistemi integrati che richiedono un basso overhead e C risponde a questa esigenza tramite una gestione manuale della memoria, l'esecuzione dei programmi consuma quindi meno risorse ma si richiede un maggiore impegno da parte del programmatore, è infatti suo compito allocare memoria adeguatamente e successivamente liberarla. 
+Rimettendo totalmente al programmatore la gestione della memoria C permette di scrivere programmi non sicuri, esistono linguaggi come Java considerati sicuri che gestiscono automaticamente la memoria tramite \textbf{garbage collection} (definizione \ref{def:garbage_collection}) al prezzo di un maggiore overhead, sono quindi poco adatti alla scrittura di codice per embedded systems.
 
 \begin{myDefinition}{Garbage collection}{garbage_collection}
     È una delle tecniche di gestione automatica della memoria più usate nei linguaggi di programmazione: tramite un modulo noto come \textbf{garbage collector} si tiene traccia di ogni allocazione e le zone di memoria non più necessarie vengono periodicamente liberate, rendendole nuovamente disponibili. 
@@ -143,35 +149,35 @@ Il linguaggio di programmazione C è stato sviluppato nel 1978 e ad oggi è anco
 \end{myDefinition}
 
 Nel breve futuro ci si aspetta sempre un numero crescente di oggetti d'uso comune connessi tra loro (i.e. internet of things) e si sente la necessità di metodi sicuri per programmare sistemi integrati. 
-Nella ricerca di un linguaggio sicuro con gestione esplicita della memoria Rust sembra essere il miglior candidato: il sistema dei tipi di Rust è detto lineare, questa scelta di sviluppo prende forma nei meccanismi di \textbf{ownership} e \textbf{borrowing} (definizioni \ref{def:ownership} e \ref{def:borrowing}) e \textbf{lifetime}. 
+Nella ricerca di un linguaggio sicuro con gestione esplicita della memoria Rust sembra essere il miglior candidato grazie ai \textbf{lifetime}, questi descrivono lo scope nel quale una variabile è valida e sono fondamentali al corretto funzionamento dei meccanismi di \textbf{ownership} e \textbf{borrowing}, dal momento che la loro verifica avviene a tempo di compilazione l'esecuzione dei programmi ne guadagna in velocità. 
+I due obiettivi di Rust sono infatti sicurezza e velocità d'esecuzione dei suoi programmi: la prima è garantita dall'ownership che impedisce il manifestarsi di \textbf{side effect} (definizione \ref{def:side_effect}), la seconda sia tramite il maggior numero possibile di controlli statici che tramite borrowing il quale simula una call by reference - in Rust come in C c'è solo call by value. 
 
-Nella sintassi e nella semantica di un sistema tipato (capitolo \ref{chap:type_safety}) è presente il contesto $\Gamma$ ovvero un insieme composto da coppie nella forma $x:T$, con $x$ variabile e $T$ tipo, ed un operatore "$,$" che dati due contesti ne genera un terzo come concatenazione dei primi due. 
-Non sono ammesse ripetizioni di variabili e si assume che venga applicata automaticamente una ridenominazione, l'$\alpha$-regola garantisce che il contesto manterrà la sua consistenza. Consideriamo le tre seguenti proprietà base dette \textit{strutturali}:
+\begin{myDefinition}{Side effect}{side_effect}
+    Un programma presenta side effect quando contiene almeno un'operazione che modifica lo stato di una o più variabili non presenti nel suo ambiente locale.
+    I side effect non sono necessariamente negativi, variabili globali e processi concorrenti acquistano la loro forza proprio da questi effetti collaterali.
+\end{myDefinition}
+
+\chapter{Rust}
+
+\section{Sistemi di tipi substrutturali}
+
+I sistemi di tipi \textbf{substrutturali} sono una famiglia di sistemi di tipi (capitolo \ref{chap:type_safety}) dove almeno una delle seguenti proprietà - dette \textbf{strutturali} - non è presente o lo è sotto determinate condizioni, analogamente si parla di logiche substrutturali.
 
 \begin{lemma}[Exchange] \label{lemma:exchange}
-  All'interno di un contesto l'ordine delle coppie è irrilevante.
-  \begin{equation*}
-      \Gamma_{1},x_{1}:T_{1},x_{2}:T_{2},\Gamma_{2} \vdash t:T \longrightarrow \Gamma_{1},x_{2}:T_{2},x_{1}:T_{1},\Gamma_{2} \vdash t:T
-  \end{equation*}
+    L'ordine degli elementi all'interno di un'ipotesi o conclusione è irrilevante.
 \end{lemma}
 
 \begin{lemma}[Weakening] \label{lemma:weakening}
-  L'aggiunta nel contesto di coppie non necessarie è irrilevante ai fini del calcolo dei sequenti.
-  \begin{equation*}
-      \Gamma_{1},\Gamma_{2} \vdash t:T \longrightarrow \Gamma_{1},x_{1}:T_{1},\Gamma_{2} \vdash t:T
-  \end{equation*}
+    L'ipotesi e la conclusione possono essere estese con affermazioni non rilevanti senza alcuna ripercussione. 
 \end{lemma}
 
 \begin{lemma}[Contraction] \label{lemma:contraction}
-  Se abbiamo una derivazione con due assunzioni identiche allora possiamo avere lo stesso risultato usandone una sola.
-  \begin{equation*}
-      \Gamma_{1},x_{2}:T_{1},x_{3}:T_{1},\Gamma_{2} \vdash t:T_{2} \longrightarrow \Gamma_{1},x_{1}:T_{1},\Gamma_{2} \vdash \sigma(t):T
-  \end{equation*}
-  Sia $\sigma$ la sostituzione $\{ x_{2} \mapsto x_{1}, x_{3} \mapsto x_{1} \}$.
+    In ipotesi o conclusione è possibile sostituire due membri con un terzo, a patto che entrambi siano nella stessa espressione e che siano effettivamente unificabili.
 \end{lemma}
 
-Una logica è detta \textit{substrutturale} quando almeno una delle proprietà strutturali è omessa e se ad essere omesse sono sia weakening che contraction si parla di logica lineare ~\cite{girard:linear_logic} e, contrariamente alle logiche tradizionali nelle quali si ha a che fare con verità di proposizioni, le logiche lineari trattano la disponibilità di risorse. 
-Tony Hoare nel 1987 pose questo esempio: supponiamo di rappresentare in logica del primo ordine con la proposizione \textit{candy} il fatto di avere una caramella e con la proposizione \textit{\$1} il possesso di un dollaro, per esprimere l'atto di compravendita di una caramella possiamo scrivere $ \textit{\$1} \rightarrow \textit{candy} $.
+Un'interpretazione delle logiche e dei sistemi substrutturali permette di ragionare in termini di consumo di risorse, vincolandone l'accesso e tenendo traccia dei cambiamenti di stato della memoria evitando stati non validi. 
+
+In un esempio del 1987 Tony Hoare suppone di rappresentare in logica del primo ordine il fatto di avere una caramella con il predicato \textit{candy} e con  \textit{\$1} il possesso di un dollaro, per esprimere l'atto di compravendita di una caramella possiamo scrivere $ \textit{\$1} \rightarrow \textit{candy} $.
 
 \begin{equation*}
   \begin{prooftree}
@@ -183,39 +189,60 @@ Tony Hoare nel 1987 pose questo esempio: supponiamo di rappresentare in logica d
 
 Se ne deduce $ \textit{\$1} \land \textit{candy} $ e si ha una caramella senza aver pagato, si può evitare questo problema con modellazioni differenti della base di conoscenza ma si incorre nel \textit{frame problem} \footnote{In intelligenza artificiale è il problema di dover rappresentare una conoscenza in logica senza ricorrere a numerosi assiomi i quali indicano solo che l'ambiente non cambia arbitrariamente.}. 
 
-Un sistema lineare ~\cite{walker:linear_logic}, basato quindi su logica lineare, permettendo exchange ma non weakening né contraction garantisce che ogni variabile venga usata al più una volta, a tal fine nella sintassi di una logica lineare sono presenti dei qualificatori che indicano se la variabile marcata possa essere usata solo una volta o meno, in Rust ad esempio sui tipi primitivi non è posta alcuna restrizione. 
+\begin{table}[h!t]
+    \centering
+    \caption{Sistemi di tipi substrutturali.}
+    \label{tab:substructural_type_systems}
+    \begin{tabular}{c|ccc}
+        & \textbf{Exchange} & \textbf{Weakening} & \textbf{Contraction} \\
+        \hline
+        \textbf{Rilevante} & \cmark & \xmark & \cmark\\
+        \textbf{Affine} & \cmark & \cmark & \xmark\\
+        \textbf{Lineare} & \cmark & \xmark & \xmark\\
+        %\textbf{Ordinato} & \xmark & \xmark & \xmark\\
+    \end{tabular}
+\end{table}
 
-Per garantire la non riusabilità di una variabile vengono imposte due invarianti:
+Nella tabella \ref{tab:substructural_type_systems} è presentata una corrispondenza tra alcuni sistemi substrutturali e le regole in esso valide: in un sistema di tipi rilevante dal momento che non vale la weakening non è possibile avere risorse superflue e ognuna dovrà essere usata almeno una volta. 
+La definizione del verbo "usare" è ambigua e dipende dall'implementazione del linguaggio, si può definire un insieme di azioni e quando si afferma di usare una risorsa ci si riferisce all'esecuzione su questa di una delle azioni possibili, in Rust sono definite dalle regole di ownership.
+
+In un sistema affine non è valida la contraction, questo implica che due usi differenti della stessa risorsa non passono essere unificati in uno solo, in un programma si può tradurre con l'impossibilità di liberare due volte la stessa zona di memoria (\ref{sec:double_free}); un sistema o una logica lineare ~\cite{girard:linear_logic} è sintesi di uno rilevante e un affine quindi vale solo exchange, ogni risorsa deve essere usata esattamente una volta.
+Nella sintassi di una logica lineare sono presenti dei qualificatori che marcano una variabile come lineare indicando che debba essere usata una volta.
+
+In un sistema lineare per garantire la non riusabilità di una variabile vengono imposte due invarianti ~\cite{walker:linear_logic}:
 
 \begin{enumerate}
     \item Le variabili lineari sono usate esattamente una volta per ogni cammino nel diagramma di flusso.
     \item Espressioni meno restrittive non possono contenere espressioni più restrittive. 
 \end{enumerate}
 
-Il perché la prima invariante sia fondamentale è chiaro, dopotutto è proprio il nostro obiettivo; per la seconda supponiamo di avere un oggetto \texttt{X} che può essere usato più volte e un suo attributo \texttt{X.y} lineare, sarebbe possibile sfruttare \texttt{X} per usare più volte \texttt{X.y}, si avrebbe in questo una violazione della linearità. 
-Cosa voglia dire "usare" dipende dall'implementazione, in Rust valgono le regole di ownership.
+Il perché la prima invariante sia fondamentale è chiaro, dopotutto è proprio il nostro obiettivo; per la seconda supponiamo di avere un oggetto \texttt{X} non lineare e un suo attributo \texttt{X.y} lineare, sarebbe possibile sfruttare \texttt{X} per usare più volte \texttt{X.y}, si avrebbe in questo modo una violazione della linearità. 
 
-\begin{myDefinition}{Ownership}{ownership}
-    L'ownership rappresenta il possesso di un right value da parte di un left value: dato un assegnamento un left value punta ad un'area du memoria contenente un right value, il nome è dovuto alla posizione nell'assegnamento. 
-    
-    In Rust gli oggetti di tipo composto sono lineari e a questi si applica ownership mentre per i dati di tipo primitivo non ci sono restrizioni, al momento dell'inizializzazione di un oggetto la sua variabile, se presente, è l'unico owner e un assegnamento ad una seconda variabile fa passare il possesso dalla prima alla seconda: in qualsiasi momento quindi può esserci solo un possessore per ogni oggetto di tipo non primitivo. 
+\section{Linearità in Rust}
 
-    In Rust un owner viene invalidato con la sua distruzione quando esce dal suo scope, bisogna porre particolare attenzione in questo caso dato che le chiamate di funzioni possono invalidare una variabile passatavi come argomento: l'ownership è passata alla nuova variabile nel corpo della funzione e una volta terminato il suo scope non sarà più possibile accedere all'oggetto. 
+Rust presenta un sistema dei tipi lineare e tutte le variabili sono marcate come lineari tranne quelle di tipo primitivo, le invarianti sulla linearità vengono rispettate tramite ownership e borrowing.
 
-    \lstinputlisting[language=Rust,caption={Ownership}, label={lst:ownership}]{../code/Ownership/own.rs}
+L'ownership rappresenta il possesso di un right value da parte di un left value (definizione \ref{def:left_right_value}), in Rust gli oggetti di tipo composto sono lineari e solo a questi si applica ownership, al momento dell'inizializzazione di un oggetto la sua variabile, se presente, è l'unico owner e un assegnamento ad una seconda variabile fa passare il possesso dalla prima alla seconda: in qualsiasi momento quindi può esserci solo un possessore per ogni oggetto. 
+Un owner viene invalidato con la sua distruzione quando esce dal suo scope, bisogna porre particolare attenzione in questo caso dato che le chiamate di funzioni possono invalidare una variabile passata come argomento: il possesso passa alla nuova variabile nel corpo della funzione e una volta terminato il suo scope non sarà più possibile accedere all'oggetto con la variabile vecchia, in quanto si può avere massimo un owner per volta, né con la nuova poiché fuori dal suo scope (listato \ref{lst:ownership}). 
+
+\lstinputlisting[language=Rust,caption={Ownership}, label={lst:ownership}]{../code/Ownership/own.rs}
+
+\begin{myDefinition}{Left e Right value}{left_right_value}
+    Dato un assegnamento un left value punta ad un'area di memoria contenente un right value, il nome è dovuto alla posizione dei due valori rispetto all'operatore di assegnamento. 
 \end{myDefinition}
 
-\begin{myDefinition}{Borrowing}{borrowing}
-  L'ownership è fondamentale per garantire una gestione automatica e sicura della memoria senza garbage collector ma non è sempre desiderabile prendere possesso di un oggetto, in questi casi si ricorre al borrowing tramite il quale si possono creare molteplici  riferimenti ~\cite[4.2]{rust:language} ad un dato purché in sola lettura, tramite il modificatore \textcode{mut} si può creare un riferimento modificabile a patto che in qualsiasi momento per ogni variabile se ne abbia al più uno. 
-  Un modulo chiamato \textbf{borrow checker} garantisce a tempo di compilazione che finché esistono dei riferimenti ad un oggetto l'oggetto stesso non possa essere distrutto. 
+L'ownership è fondamentale per garantire una gestione automatica e sicura della memoria senza garbage collector ma non è sempre desiderabile prendere possesso di un oggetto, in questi casi si ricorre al borrowing.
 
-    \lstinputlisting[language=Rust,caption={Borrowing}, label={lst:borrowing}]{../code/Borrowing/borr.rs}
-\end{myDefinition}
+Tramite il borrowing si possono creare molteplici  riferimenti ~\cite[4.2]{rust:language} ad un dato purché in sola lettura, con il modificatore \textcode{mut} è possibile rendere il riferimento modificabile a patto che in qualsiasi momento per qualsiasi variabile ve ne sia al più uno. 
+Un modulo chiamato \textbf{borrow checker} garantisce a tempo di compilazione che finché esistono dei riferimenti ad un oggetto non sia possibile distruggere l'oggetto in questione. 
 
-Un lifetime è un costrutto usato dal borrow checker per garantire che ogni riferimento sia valido, il lifetime di una variabile inizia quando viene creata e termina quando viene distrutta, quando possibile il compilatore inferisce i lifetime altrimenti è necessario gestirli manualmente. 
-I lifetime sono delle regioni di codice nella quale i riferimenti devono essere validi ~\cite[3.3]{rust:rustonomicon} ed è facile confonderli con gli scope, negli esempi più semplici coincidono ma i lifetime esprimono relazioni tra scope; un lifetime può essere associato a più scope e uno scope può avere associati più lifetime. 
+\lstinputlisting[language=Rust,caption={Borrowing}, label={lst:borrowing}]{../code/Borrowing/borr.rs}
 
-In Rust ci sono tre regole assiomatiche sui lifetime ~\cite{mechpen:misundestand}:
+Un lifetime è un costrutto usato dal borrow checker per garantire che ogni riferimento sia valido, il lifetime di una variabile inizia quando questa viene creata e termina quando viene distrutta; il compilatore quando possibile inferisce i lifetime, in caso contrario è necessario gestirli manualmente.
+
+I lifetime sono delle regioni di codice nella quale ogni riferimento deve essere valido ~\cite[3.3]{rust:rustonomicon} ma è facile confondere scope e lifetime, negli esempi più semplici coincidono ma i secondi esprimono relazioni tra scope: un lifetime può essere associato a più scope e uno scope può avere associati più lifetime. 
+
+Per quanto concerne i lifetime in Rust valgono tre regole assiomatiche ~\cite{mechpen:misundestand}:
 
 \begin{lemma}[Association] \label{lemma:association}
     Dato un riferimento il suo scope è sottoinsieme del suo lifetime.
@@ -238,10 +265,10 @@ In Rust ci sono tre regole assiomatiche sui lifetime ~\cite{mechpen:misundestand
     \end{equation*}
 \end{lemma}
 
-ne deriva
+e ne deriva una quarta regola:
 
 \begin{lemma}[Struct reference] \label{lemma:struct_reference}
-    Data una struct \textnormal{\textcode{struct S<'a>\{x:\&'a T\}}} il lifetime associato ad un riferimento ad una struct è sottoinsieme del lifetime del membro della struct.
+    Data una struct \textnormal{\textcode{struct S<'a>\{x:\&'a T\}}} il lifetime associato ad un riferimento di una struct è sottoinsieme del lifetime del membro della struct.
     \begin{equation*}
         \textnormal{\textcode{s:\&'b S<'a>}} \longrightarrow \ 'b \subseteq \ 'a
     \end{equation*}
@@ -257,32 +284,33 @@ e si hanno delle regole speciali:
 \end{itemize}
 
 Si parla di \textbf{outliving} quando per una variabile è possibile mantenere il riferimento di un oggetto distrutto. 
-Nelle righe 2 e 5 del listato \ref{lst:lifetime_1} si possono applicare rispettivamente le regole \ref{lemma:association} e \ref{lemma:reference} per dedurre $ scope(x) \subseteq \ 'a $ e $ 'a \subseteq scope(y) $, chiaramente $ scope(y) \subset scope(x) $ quindi il borrow checker interviene.
+Nelle righe 2 e 5 del listato \ref{lst:lifetime_1} si possono applicare rispettivamente le regole \ref{lemma:association} e \ref{lemma:reference} per dedurre $ scope(x) \subseteq \ 'a $ e $ 'a \subseteq scope(y) $, è noto $ scope(y) \subset scope(x) $ quindi il borrow checker interviene.
 
 \lstinputlisting[language=Rust]{../code/Lifetime/life_1.rs}
 \lstinputlisting[caption={Outliving e borrow checker.}, label={lst:lifetime_1}, numbers=none]{../code/Lifetime/output/life_1.txt}
 
-Si può ottenere outliving cambiando il tipo di \textcode{y} da \textcode{i32} a \textcode{\&i32} (listato \ref{lst:lifetime_1_1}), così facendo non è possibile applicare \ref{lemma:reference} e vale $ scope(y) \subset scope(x) \subset \ 'a $.
+Si può ottenere outliving cambiando il tipo di \textcode{y} da \textcode{i32} a \textcode{\&i32} (listato \ref{lst:lifetime_1_1}), così facendo non è possibile applicare \ref{lemma:reference} e vale $ scope(y) \subset scope(x) \subset \ 'a $. 
+Un comportamento del genere è inaspettato ma è stato reso possibile per semplificare la definizione di variabili costanti statiche di tipo primitivo ~\cite{git:outliving_static}, i riferimenti ai letterali vengono allocati in memoria di default staticamente e non automaticamente (capitolo \ref{chap:memory_safety}) creando un riferimento con lifetime \textcode{'static}, dunque ogni riferimento ad un dato di tipo primitivo è valido per la durata di tutto il programma.
 
 \lstinputlisting[language=Rust]{../code/Lifetime/life_1_1.rs}
 \lstinputlisting[caption={Outliving.}, label={lst:lifetime_1_1}, numbers=none]{../code/Lifetime/output/life_1_1.txt}
 
-Quanto fatto non è valido per tipi composti perché in Rust sono costituiti da una struct, nel listato \ref{lst:lifetime_1_2} nella riga 2 si ha $ scope(x) \subseteq \ 'a $ per \ref{lemma:association} e $ 'a \subseteq scope(y) \subseteq \ 'b$ per \ref{lemma:struct_reference}, è noto $ scope(y) \subset scope(x) $ ed essendoci una contraddizione il borrow checker interviene.  
+In Rust i tipi composti sono costituiti da una struct, nel listato \ref{lst:lifetime_1_2} si può vedere la situazione precedente ma con un tipo non primitivo: nella riga 2 si ha $ scope(x) \subseteq \ 'a $ per \ref{lemma:association} e $ 'a \subseteq scope(y) \subseteq \ 'b$ per \ref{lemma:struct_reference}, è noto $ scope(y) \subset scope(x) $ ed essendoci una contraddizione il borrow checker interviene.  
 
 \lstinputlisting[language=Rust]{../code/Lifetime/life_1_2.rs}
 \lstinputlisting[caption={Outliving con tipi composti.}, label={lst:lifetime_1_2}, numbers=none]{../code/Lifetime/output/life_1_2.txt}
 
-Una \textbf{temporary} è una variabile anonima inizializzata con il risultato di un'espressione, verrà usata per le successive valutazioni e perderà validità solo al termine del suo scope come qualsiasi variabile. 
+Nell'errore in output si parla di \textbf{temporary}: è una variabile anonima inizializzata con il risultato di un'espressione, verrà usata per le successive valutazioni e perderà validità solo al termine del suo scope come qualsiasi variabile. 
 A \textcode{Box::new(13)} corrisponde una temporary e quando si tenta di leggerne il valore fuori dal suo scope il compilatore segnala l'errore. 
 
-Per ora sono stati visti esempi in cui i lifetime erano inferiti, nel listato \ref{lst:lifetime_longest} si possono vedere dei lifetime esplicitati, si ha:
-\begin{align*}
+Negli esempi precedenti i lifetime sono sempre stati inferiti ma nel listato \ref{lst:lifetime_longest} sono esplicitati, si ha:
+\begin{gather*}
     scope(rs1) \subseteq \ 'a \subseteq scope(s1) \\
     scope(rs2) \subseteq \ 'a \subseteq scope(s2) \\
     scope(result) \subseteq \ 'a \\
-\end{align*}
+\end{gather*}
 
-che è soddisfatto con $'a = scope(result) $.
+che è soddisfatto con $ 'a = scope(result) $.
 
 \lstinputlisting[language=Rust]{../code/Lifetime/life_longest.rs}
 \lstinputlisting[caption={Lifetime espliciti.}, label={lst:lifetime_longest}, numbers=none]{../code/Lifetime/output/life_longest.txt}
@@ -292,7 +320,7 @@ In Rust per i dati di tipo primitivo si eseguono sempre deep copy mentre per gli
 
 \lstinputlisting[language=Rust, caption={Ownership con tipi primitivi.}, label={lst:ownership_primitive}]{../code/Ownership/own_prim.rs}
 
-I controlli su ownership e borrowing sono eseguiti a tempo di compilazione rendendo l'esecuzione molto più rapida e sicura, questi vantaggi si ottengono al prezzo di un linguaggio più verboso e che richiede maggior impegno cognitivo da parte del programmatore. 
+Se con ownership e borrowing l'esecuzione di un programma è molto più rapida e sicura il linguaggio è più verboso e richiede maggior impegno cognitivo da parte del programmatore. 
 
 
 \chapter{Security policy} \label{chap:security_policy}
