minor changes, see on artix

--- a/tex/main.bib
+++ b/tex/main.bib
@@ -20,6 +20,7 @@
   title           = {A security feature framework for programming languages to minimize application layer vulnerabilities},
   journal         = {Security and Privacy},
   year            = {2020},
+  url 		  = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/spy2.95},
 }
 
 @article{wright_felleisen:typesafety,
