--- a/tex/main.tex
+++ b/tex/main.tex
@@ -491,10 +491,9 @@ In Rust non è possibile ricreare l'esempio in C perché come già visto il borr
 
 \chapter{Type Safety} \label{chap:type_safety}
 Ogni oggetto in matematica ha un \textbf{tipo}, basti pensare al fatto che non è possibile eseguire un'operazione come $ \{13\} \land 10 $ dato che $\{13\}$ è un insieme, $10$ è un numero e $\land$ è un connettivo logico. 
-In informatica un tipo è un vincolo che definisce un insieme definito di valori validi per una risorsa di un programma, in un linguaggio tipato l'insieme delle regole che assegna un tipo ad ogni espressione è detto semantica statica o \textbf{sistema dei tipi} ed è composto da quattro aspetti: \textbf{type safety}, \textbf{type casting}, \textbf{type initialization} e \textbf{immutability} ~\cite{security_framework}.
-
+In informatica un tipo è un vincolo che definisce un insieme ben definito di valori validi per una risorsa di un programma.
 Durante l'esecuzione di un programma si può incorrere in due tipi di errore: \textbf{trapped} e \textbf{untrapped}, i primi sono facilmente riconoscibili dato che interrompono l'esecuzione del programma, i secondi no e per questo sono molto più difficili da individuare.
-Un linguaggio in cui nessun programma ben tipato (definizione \ref{def:type_checking}) genera errori trapped né untrapped si dice \textbf{sound}, se ne genera solo untrapped invece è \textbf{safe}, un linguaggio sound quindi è necessariamente type safe ~\cite{cencia:dispense}.
+Un programma che supera il controllo dei tipi (definizione \ref{def:type_checking}) è ben tipato e un linguaggio in cui nessun programma ben tipato genera errori trapped né untrapped si dice \textbf{sound} e in un linguaggio \textbf{safe} nessun programma genera errori untrapped, un linguaggio sound è necessariamente type safe ~\cite{cencia:dispense}.
 Una definizione analoga ma meno formale di Milner spesso adottata è la seguente:
 
 \begin{center}
@@ -503,12 +502,18 @@ Una definizione analoga ma meno formale di Milner spesso adottata è la seguente
 
 con programmi che "vanno male" si possono intendere programmi non sound o che generano undefined behavior (capitolo \ref{chap:security_policy}).
 
+
+
+In un linguaggio tipato l'insieme delle regole che assegna un tipo ad ogni espressione è detto semantica statica o \textbf{sistema dei tipi}, in ~\cite{security_framework} vengono identificate 4 componenti che permettono di definire un linguaggio più sicuro, queste sono \textbf{type safety}, \textbf{type casting}, \textbf{type initialization} e \textbf{immutability}.
+
 \begin{myDefinition}{Type checking}{type_checking}
-    La fase di verifica dei vincoli imposti dai tipi può avvenire a tempo di compilazione o a tempo di esecuzione e si parla rispettivamente di type checking statico/forte e dinamico/debole.
-    Ad un controllo statico consegue un'ottimizzazione e per questo è desiderabile, purtroppo non è sempre possibile verificare la correttezza di un programma a tempo di compilazione e di norma sono utilizzati sia static che dynamic type checker, in Java ad esempio i controlli sui metodi sono eseguiti dinamicamente.
+    È la verifica dei vincoli imposti dai tipi, può avvenire sia a tempo di compilazione che a tempo di esecuzione e si parla rispettivamente di type checking statico/forte e dinamico/debole.
+    Un controllo statico è desiderabile per l'ottimizzazione che ne consegue ma non sempre è possibile verificare la correttezza di un programma a tempo di compilazione, di norma sono utilizzati sia static che dynamic type checker, in Java ad esempio i controlli sui metodi sono eseguiti dinamicamente.
 
     Un programma che supera la fase di type checking è ben tipato.     
 \end{myDefinition}
+
+\section{Type safety}
  
 \section{Type casting}
 Quando si esegue un'operazione tra oggetti di tipo differente può rivelarsi necessaria una conversione di tipo (type casting) e può essere esplicita o implicita, nel secondo caso si parla di \textbf{coercion}. Tipicamente i linguaggi con type checking forte eseguono pochi casting impliciti e quelli con type checking dinamico molti, Rust è fortemente tipato e non c'è coercion contrariamente a C che è debolmente tipato.   
